--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ footer p {
     font-size: 1.1em;
 }
 
+
 .container {
     max-width: 800px;
     margin: 0 auto;
@@ -58,3 +59,7 @@ footer p {
     color: #0056b3;
     text-decoration: underline;
 }
+
+.text-justify {
+    text-align: justify !important;
+  }
